Don't allow individual bug IDs to wrap in the dashboard.
For some bug trackers, IDs can look something like "OPS-4537". Because of the
small width of the "Bugs" column in the dashboard, this would wrap onto
multiple lines at the hyphen. This simple change forces each individual bug ID
not to wrap, which dramatically improves the look.

Testing done:
Added some long bug IDs with hyphens in them and saw that wrapping only
occurred between IDs.

Fixes bug 4376.

Reviewed at https://reviews.reviewboard.org/r/8087/

--- a/reviewboard/static/rb/css/ui/datagrids.less
+++ b/reviewboard/static/rb/css/ui/datagrids.less
@@ -23,6 +23,7 @@ body.datagrid-page {
       .datagrid td.bugs a {
         text-decoration: underline;
         color: @link-color;
+	white-space: nowrap;
       }
 
       .datagrid-body-container {
